refactor: update linting commands, improve type hints, and enhance follower configurations

--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -64,6 +64,8 @@ blank = true
 pythonVersion = "3.12"
 typeCheckingMode = "strict"
 reportMissingTypeStubs = false
+reportUnknownParameterType = "error"
+reportUnknownVariableType = "error"
 
 [tool.pytest.ini_options]
 asyncio_mode = "auto"
